[gd_scene load_steps=6 format=3 uid="uid://hlxud1ado0ys"]

[ext_resource type="Script" uid="uid://bbpi0o8k6bk54" path="res://scripts/boss_4.gd" id="1_t8tms"]
[ext_resource type="Texture2D" uid="uid://jkft8w5xbpl6" path="res://images/VmanWithoutBubble.png" id="2_t8tms"]
[ext_resource type="Texture2D" uid="uid://dj2br04yejf1m" path="res://images/Reimu.PNG.webp" id="3_s87l8"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4phh5"]
size = Vector2(191.5, 247)

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_4phh5"]
particle_flag_disable_z = true
inherit_velocity_ratio = 0.253
spread = 180.0
initial_velocity_min = 216.67
initial_velocity_max = 400.0
gravity = Vector3(0, 980, 0)

[node name="VmanThePro" type="Area2D"]
script = ExtResource("1_t8tms")

[node name="Freaky" type="Sprite2D" parent="."]
z_index = -19
position = Vector2(3, -1)
scale = Vector2(0.5, 0.47343)
texture = ExtResource("2_t8tms")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-2.75, -2.5)
shape = SubResource("RectangleShape2D_4phh5")

[node name="BossShotgunInterval" type="Timer" parent="."]
one_shot = true
ignore_time_scale = true

[node name="bulletShootinEverywhere" type="Timer" parent="."]
one_shot = true
ignore_time_scale = true

[node name="shootTowardsThePlayer" type="Timer" parent="."]
wait_time = 2.0

[node name="BulletIntervalForRotator" type="Timer" parent="."]

[node name="Rotator" type="Node2D" parent="."]
visible = false
position = Vector2(-213, 118)

[node name="Rotator2" type="Node2D" parent="."]
visible = false
position = Vector2(176, 118)

[node name="Rotator3" type="Node2D" parent="."]
visible = false
position = Vector2(165, -166)

[node name="Rotator4" type="Node2D" parent="."]
visible = false
position = Vector2(-219, -166)

[node name="phase3Attack" type="Timer" parent="."]
wait_time = 1.1

[node name="explode" type="GPUParticles2D" parent="."]
position = Vector2(-0.773868, -2.38419e-07)
emitting = false
amount = 10
amount_ratio = 0.656
texture = ExtResource("3_s87l8")
one_shot = true
explosiveness = 1.0
randomness = 1.0
draw_order = 0
trail_lifetime = 0.55
process_material = SubResource("ParticleProcessMaterial_4phh5")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
[connection signal="timeout" from="BossShotgunInterval" to="." method="_on_boss_shotgun_interval_timeout"]
[connection signal="timeout" from="bulletShootinEverywhere" to="." method="_on_bullet_shootin_everywhere_timeout"]
[connection signal="timeout" from="shootTowardsThePlayer" to="." method="_on_shoot_towards_the_player_timeout"]
[connection signal="timeout" from="BulletIntervalForRotator" to="." method="_on_bullet_interval_for_rotator_timeout"]
[connection signal="timeout" from="phase3Attack" to="." method="_on_phase_3_attack_timeout"]
